# llm-ossie-postgres

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  results.md
db/: init.sql
ossie/: retail_model.yaml
src/: db_client.py  demo.py  llm_client.py
