[project]
name = "llm-ossie-postgres"
version = "0.1.0"
description = "Demo: Apache Ossie semantic model improves LLM-generated SQL accuracy on Postgres"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 80

[tool.ruff.lint]
select = ["E", "F", "I", "W", "D", "N"]
ignore = ["D100", "D104"]

[tool.ruff.lint.pydocstyle]
convention = "google"
